@@ -2,66 +2,60 @@ package uk.gov.cslearning.record.service;
 
 import org.springframework.stereotype.Service;
 import uk.gov.cslearning.record.domain.Booking;
+import uk.gov.cslearning.record.domain.BookingStatus;
 import uk.gov.cslearning.record.domain.Event;
 import uk.gov.cslearning.record.domain.Learner;
 import uk.gov.cslearning.record.domain.factory.BookingFactory;
-import uk.gov.cslearning.record.dto.BookingCancellationReason;
 import uk.gov.cslearning.record.dto.BookingDto;
-import uk.gov.cslearning.record.dto.BookingStatus;
 import uk.gov.cslearning.record.dto.BookingStatusDto;
 import uk.gov.cslearning.record.dto.factory.BookingDtoFactory;
 import uk.gov.cslearning.record.exception.BookingNotFoundException;
+import uk.gov.cslearning.record.exception.EventNotFoundException;
+import uk.gov.cslearning.record.notifications.dto.IMessageParams;
 import uk.gov.cslearning.record.notifications.service.NotificationService;
 import uk.gov.cslearning.record.repository.BookingRepository;
 import uk.gov.cslearning.record.repository.EventRepository;
-import uk.gov.cslearning.record.service.booking.BookingNotificationService;
+import uk.gov.cslearning.record.util.UtilService;
 
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 public class DefaultBookingService implements BookingService {
 
+    private final UtilService utilService;
     private final BookingFactory bookingFactory;
     private final BookingDtoFactory bookingDtoFactory;
     private final BookingRepository bookingRepository;
     private final EventRepository eventRepository;
-    private final NotificationService notificationService;
     private final MessageService messageService;
-    private final BookingNotificationService bookingNotificationService;
+    private final NotificationService notificationService;
 
-    public DefaultBookingService(BookingFactory bookingFactory, BookingDtoFactory bookingDtoFactory, BookingRepository bookingRepository, EventRepository eventRepository, NotificationService notificationService, MessageService messageService, BookingNotificationService bookingNotificationService) {
+    public DefaultBookingService(UtilService utilService, BookingFactory bookingFactory,
+                                 BookingDtoFactory bookingDtoFactory, BookingRepository bookingRepository,
+                                 EventRepository eventRepository, MessageService messageService, NotificationService notificationService) {
+        this.utilService = utilService;
         this.bookingFactory = bookingFactory;
         this.bookingDtoFactory = bookingDtoFactory;
         this.bookingRepository = bookingRepository;
         this.eventRepository = eventRepository;
-        this.notificationService = notificationService;
         this.messageService = messageService;
-        this.bookingNotificationService = bookingNotificationService;
+        this.notificationService = notificationService;
     }
 
     @Override
     public Optional<BookingDto> find(int bookingId) {
-
-        BookingDto bookingDto = bookingRepository.findById(bookingId).map(
-                bookingDtoFactory::create
-        ).orElse(null);
-
-        return Optional.ofNullable(bookingDto);
+        return bookingRepository.findById(bookingId).map(bookingDtoFactory::create);
     }
 
     @Override
     public Optional<BookingDto> find(String eventUid, String learnerUid) {
-        List<BookingStatus> status = Arrays.asList(BookingStatus.REQUESTED, BookingStatus.CONFIRMED, BookingStatus.CANCELLED);
-
-        BookingDto bookingDto = bookingRepository.findByEventUidLearnerUid(eventUid, learnerUid, status).map(
-                bookingDtoFactory::create
-        ).orElse(null);
-
-        return Optional.ofNullable(bookingDto);
+        return bookingRepository.findByEventUidAndLearnerUid(eventUid, learnerUid).map(bookingDtoFactory::create);
     }
 
     @Override
@@ -78,86 +72,58 @@ public class DefaultBookingService implements BookingService {
     @Override
     public Optional<BookingDto> findByLearnerUidAndEventUid(String eventUid, String learnerUid) {
         Optional<Booking> booking = findActiveBookingByLearnerUidAndEventUid(learnerUid, eventUid);
-
-        if (booking.isPresent()) {
-            return Optional.of(bookingDtoFactory.create(booking.get()));
-        }
-        return Optional.empty();
-    }
-
-    /**
-     * Saves or updates a booking object.
-     * A booking will be requested/registered if a user is requesting a paid for course without valid PO.
-     * A booking will be confirmed if user provides a valid PO,
-     * or if an admin changes status to 'Booked' on lpg-management,
-     * or if the face-to-face module is free.
-     *
-     * @param bookingDto - passed from client or retrieved from database
-     * @return savedBookingDto - dto for persisted booking
-     */
-    @Override
-    public BookingDto register(BookingDto bookingDto) {
-        BookingDto savedBookingDto = save(bookingDto);
-
-        if (bookingDto.getStatus().equals(BookingStatus.CONFIRMED) || bookingDto.getStatus().equals(BookingStatus.CANCELLED)) {
-            bookingNotificationService.sendConfirmedNotifications(savedBookingDto);
-        } else if (bookingDto.getStatus().equals(BookingStatus.REQUESTED)) {
-            bookingNotificationService.sendRequestedNotifications(savedBookingDto);
-        }
-
-        return savedBookingDto;
+        return booking.map(bookingDtoFactory::create);
     }
 
     @Override
     public BookingDto updateStatus(int bookingId, BookingStatusDto bookingStatus) {
         Booking booking = bookingRepository.findById(bookingId).orElseThrow(() -> new BookingNotFoundException(bookingId));
-
-        return updateStatus(booking, bookingStatus);
+        return update(booking, bookingStatus);
     }
 
     @Override
     public BookingDto updateStatus(String eventUid, String learnerUid, BookingStatusDto bookingStatus) {
         Booking booking = findActiveBookingByLearnerUidAndEventUid(learnerUid, eventUid).orElseThrow(() -> new BookingNotFoundException(eventUid, learnerUid));
-
-        return updateStatus(booking, bookingStatus);
+        return update(booking, bookingStatus);
     }
 
-    private BookingDto updateStatus(Booking booking, BookingStatusDto bookingStatusDto) {
-        BookingDto bookingDto = bookingDtoFactory.create(booking);
-
-        if (bookingStatusDto.getStatus().equals(BookingStatus.CONFIRMED)) {
-            bookingDto.setStatus(bookingStatusDto.getStatus());
-            bookingDto.setConfirmationTime(Instant.now());
-
-            return register(bookingDto);
+    @Override
+    public BookingDto create(String eventUid, BookingDto bookingDto) {
+        Event event = eventRepository.findByUid(eventUid).orElseThrow(() -> new EventNotFoundException(eventUid));
+        List<IMessageParams> notifications = new ArrayList<>();
+        Booking booking = bookingFactory.create(bookingDto);
+        event.addBooking(booking);
+        bookingRepository.save(booking);
+        if (bookingDto.getStatus().equals(BookingStatus.CONFIRMED)) {
+            notifications.addAll(messageService.createBookedMessages(booking));
         } else {
-            bookingDto.setCancellationReason(BookingCancellationReason.valueOf(bookingStatusDto.getCancellationReason()));
-            bookingNotificationService.sendCancelledNotifications(bookingDto, bookingStatusDto);
-
-            return unregister(bookingDto);
+            notifications.addAll(messageService.createRegisteredMessages(booking));
         }
+        notificationService.send(notifications);
+        return bookingDtoFactory.create(booking);
     }
 
     @Override
-    public BookingDto unregister(BookingDto bookingDto) {
-
-        bookingDto.setStatus(BookingStatus.CANCELLED);
-        bookingDto.setCancellationTime(Instant.now());
-
-        return save(bookingDto);
-    }
-
-    @Override
-    public BookingDto unregister(Booking booking, String cancellationReason) {
-        notificationService.send(messageService.createCancelEventMessage(booking, cancellationReason));
-        return unregister(bookingDtoFactory.create(booking));
+    public BookingDto update(Booking booking, BookingStatusDto bookingStatusDto) {
+        List<IMessageParams> notifications = new ArrayList<>();
+        Instant updateTimestamp = utilService.getNowInstant();
+        booking.setStatus(bookingStatusDto.getStatus());
+        if (bookingStatusDto.getStatus().equals(BookingStatus.CONFIRMED)) {
+            booking.setConfirmationTime(updateTimestamp);
+            notifications.addAll(messageService.createBookedMessages(booking));
+        } else {
+            booking.setCancellationTime(updateTimestamp);
+            booking.setCancellationReason(bookingStatusDto.getCancellationReason());
+            notifications.addAll(messageService.createCancelBookingMessages(booking));
+        }
+        bookingRepository.save(booking);
+        notificationService.send(notifications);
+        return bookingDtoFactory.create(booking);
     }
 
     @Override
     public Optional<Booking> findActiveBookingByEmailAndEvent(String learnerEmail, String eventUid) {
-        List<BookingStatus> status = Arrays.asList(BookingStatus.REQUESTED, BookingStatus.CONFIRMED);
-
-        return bookingRepository.findByLearnerEmailAndEventUid(learnerEmail, eventUid, status);
+        return bookingRepository.findByLearnerEmailAndEventUid(learnerEmail, eventUid, List.of(BookingStatus.REQUESTED, BookingStatus.CONFIRMED));
     }
 
     @Override
@@ -169,15 +135,7 @@ public class DefaultBookingService implements BookingService {
     }
 
     private Optional<Booking> findActiveBookingByLearnerUidAndEventUid(String learnerUid, String eventUid) {
-        List<BookingStatus> status = Arrays.asList(BookingStatus.REQUESTED, BookingStatus.CONFIRMED);
-
-        return bookingRepository.findByEventUidLearnerUid(eventUid, learnerUid, status);
-    }
-
-    private BookingDto save(BookingDto bookingDto) {
-        Booking booking = bookingFactory.create(bookingDto);
-        Booking savedBooking = bookingRepository.saveBooking(booking);
-        return bookingDtoFactory.create(savedBooking);
+        return bookingRepository.findByEventUidAndLearnerUidAndStatusIn(eventUid, learnerUid, List.of(BookingStatus.REQUESTED, BookingStatus.CONFIRMED));
     }
 
     @Override
